--- a/YOS/Base.lproj/Main.storyboard
+++ b/YOS/Base.lproj/Main.storyboard
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="66v-lx-7K2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tLh-iz-XJn">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Page View Controller-->
-        <scene sceneID="m3U-R5-SWV">
+        <!--Navigation Controller-->
+        <scene sceneID="VgW-x9-oWT">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="66v-lx-7K2" customClass="PageViewController" customModule="YOS" customModuleProvider="target" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7mX-EQ-WDv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController navigationBarHidden="YES" id="tLh-iz-XJn" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8ux-vc-Kf3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="PsS-9G-Vp8" kind="relationship" relationship="rootViewController" id="ALF-d8-jaD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xaj-bL-uC2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-97" y="-243"/>
+            <point key="canvasLocation" x="-801" y="-243"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ZBp-y7-apN">
@@ -31,18 +39,43 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PSG-y3-zRW">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="ScS-Sc-y4b"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                <state key="normal" title="Timesheet"/>
+                                <connections>
+                                    <segue destination="pLk-Rq-oKR" kind="show" id="2LV-MD-nuS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QN3-Nm-O4H">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="0ei-k2-hLd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                <state key="normal" title="Upload Photos"/>
+                                <connections>
+                                    <segue destination="AFI-lM-P1g" kind="show" id="0P7-uD-cX5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="QN3-Nm-O4H" firstAttribute="centerX" secondItem="Asw-Ty-WA0" secondAttribute="centerX" id="5bG-yZ-I42"/>
                             <constraint firstItem="bad-Is-Nse" firstAttribute="top" secondItem="GzZ-eH-WdK" secondAttribute="bottom" constant="100" id="F89-Ld-H3C"/>
+                            <constraint firstItem="QN3-Nm-O4H" firstAttribute="top" secondItem="PSG-y3-zRW" secondAttribute="bottom" constant="85" id="Fbr-uv-Koy"/>
                             <constraint firstItem="bad-Is-Nse" firstAttribute="leading" secondItem="Asw-Ty-WA0" secondAttribute="leadingMargin" id="dYF-gG-P03"/>
+                            <constraint firstItem="PSG-y3-zRW" firstAttribute="top" secondItem="bad-Is-Nse" secondAttribute="bottom" constant="185" id="esI-pB-tTd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="bad-Is-Nse" secondAttribute="trailing" id="fFz-wa-pIP"/>
+                            <constraint firstItem="PSG-y3-zRW" firstAttribute="centerX" secondItem="Asw-Ty-WA0" secondAttribute="centerX" id="zsI-ns-bwl"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Tk2-Ay-Vir"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JL2-Ln-qhC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-98.400000000000006" y="439.43028485757122"/>
+            <point key="canvasLocation" x="-94" y="-243"/>
         </scene>
         <!--Timesheet View Controller-->
         <scene sceneID="5RY-Xc-RAN">
@@ -64,6 +97,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8I8-JE-a3R">
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <state key="normal" title="&lt;"/>
+                                <connections>
+                                    <action selector="backButtonPressed:" destination="pLk-Rq-oKR" eventType="touchUpInside" id="KtO-5q-ooU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -72,6 +112,8 @@
                             <constraint firstItem="loI-GU-fHg" firstAttribute="centerX" secondItem="Lc4-Jb-RID" secondAttribute="centerX" id="aS3-ou-3cZ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ohm-Po-XNw" secondAttribute="trailing" constant="-5" id="fO2-C9-W9i"/>
                             <constraint firstItem="xKs-2o-XAc" firstAttribute="top" secondItem="ohm-Po-XNw" secondAttribute="bottom" id="nqn-oa-VMB"/>
+                            <constraint firstItem="8I8-JE-a3R" firstAttribute="leading" secondItem="Lc4-Jb-RID" secondAttribute="leadingMargin" id="rcx-KQ-vgw"/>
+                            <constraint firstItem="8I8-JE-a3R" firstAttribute="top" secondItem="OvZ-Zv-jPn" secondAttribute="bottom" constant="10" id="slg-ho-jR3"/>
                             <constraint firstItem="ohm-Po-XNw" firstAttribute="leading" secondItem="Lc4-Jb-RID" secondAttribute="leadingMargin" constant="-5" id="wyH-xM-Ajc"/>
                         </constraints>
                     </view>
@@ -82,7 +124,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vdQ-Ip-HOJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="609" y="-243"/>
+            <point key="canvasLocation" x="608.79999999999995" y="-243.32833583208398"/>
         </scene>
         <!--Upload View Controller-->
         <scene sceneID="O39-Bc-WKF">
@@ -109,12 +151,21 @@
                                 </connections>
                             </button>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="LZC-3V-y8P"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zy2-vI-jTK">
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <state key="normal" title="&lt;"/>
+                                <connections>
+                                    <action selector="backButtonPressed:" destination="AFI-lM-P1g" eventType="touchUpInside" id="uIe-Dt-myf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="zy2-vI-jTK" firstAttribute="top" secondItem="PbA-o0-5tS" secondAttribute="bottom" constant="10" id="42F-T2-FLS"/>
                             <constraint firstAttribute="trailing" secondItem="LZC-3V-y8P" secondAttribute="trailing" id="A1s-oo-vIN"/>
                             <constraint firstItem="P2p-Sn-bs0" firstAttribute="centerX" secondItem="rRZ-tg-aBG" secondAttribute="centerX" id="BZr-tw-hyd"/>
                             <constraint firstItem="zIy-Io-vut" firstAttribute="top" secondItem="LZC-3V-y8P" secondAttribute="bottom" id="Kfn-E4-hxV"/>
+                            <constraint firstItem="zy2-vI-jTK" firstAttribute="leading" secondItem="rRZ-tg-aBG" secondAttribute="leadingMargin" id="PtZ-o4-MTd"/>
                             <constraint firstItem="rfi-d6-krp" firstAttribute="top" secondItem="P2p-Sn-bs0" secondAttribute="bottom" constant="275" id="cgO-88-zvY"/>
                             <constraint firstItem="P2p-Sn-bs0" firstAttribute="top" secondItem="PbA-o0-5tS" secondAttribute="bottom" constant="100" id="lZa-gz-8Pr"/>
                             <constraint firstItem="rfi-d6-krp" firstAttribute="centerX" secondItem="rRZ-tg-aBG" secondAttribute="centerX" id="qHU-Mp-qog"/>
@@ -127,7 +178,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KDi-bB-YBp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1336.8" y="-243.32833583208398"/>
+            <point key="canvasLocation" x="1313" y="-243"/>
         </scene>
     </scenes>
 </document>
